--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "nodemon": "^1.17.5",
+    "prettier": "^1.13.4"
   }
 }
