--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "nodemon": "^1.17.5",
-    "prettier": "^1.13.4"
+    "prettier": "^1.13.4",
+    "pretty-quick": "^1.6.0"
   }
 }
