--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "an AirBnb clone with Geckos",
   "main": "./server/index.js",
   "scripts": {
+    "precommit": "pretty-quick --staged",
     "client": "npm start --prefix client",
     "dev:server": "nodemon ./server/index.js",
     "dev": "concurrently \"npm run dev:server\" \"npm run client\""
