--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.1.3",
     "nodemon": "^1.17.5",
-    "prettier": "^1.13.4",
-    "pretty-quick": "^1.6.0"
+    "prettier": "^1.13.4"
   },
   "lint-staged": {
     "*.{js,json,css,md}": [
