--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.1.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
