--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     }
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1"
