--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
