--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.4.0",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
