--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-stars": "^2.2.5",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
+    "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
