--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-responsive-modal": "^3.1.0",
     "react-router-dom": "^4.3.1",
     "react-stars": "^2.2.5",
     "redux": "^4.0.0",
