--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux-saga-testing": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
