--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment-range": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
+    "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.4.0",
+    "react-input-range": "^1.3.0",
     "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.1.0",
     "react-router-dom": "^4.3.1",
     "react-stars": "^2.2.5",
+    "react-toggle-switch": "^3.0.4",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "redux-persist": "^5.10.0",
