--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "moment-range": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
