--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "mapbox-gl": "^0.47.0",
     "mongoose": "^5.1.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
