--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "dompurify": "^1.0.7",
     "google-map-react": "^1.0.5",
+    "mapbox-gl": "^0.47.0",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
     "prop-types": "^15.6.2",
